# Toasty

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  EXAMPLE.md  GITHUB_APP_SETUP.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  app.js  app.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
PR_analyzer/: .gitignore  Output.txt  PR_prioritizer.py  PR_seeker.py  not_needed.txt  priority_generator.py
aibot/: github_utils.py  tests.py  urls.py  views.py
cloudflare-worker/: .env.example  .gitignore  README.md  package.json  requirements.txt  test_worker.py  worker.py  wrangler.toml
docs/: _config.yml  index.html  styles.css
scripts/: test_webhook.py
tests/: __init__.py  test_validation.py  test_webhook.py
toasty/: __init__.py  celery.py  config.py  main.py  settings.py  urls.py
toasty/aibot/: admin.py  aibot_env.py  chunk_utils.py  clients.py  constants.py  db_models.py  gemini_api.py  gh_token_manager.py  main.py  prompt_templates.py  qdrant_api.py  tasks.py  utils.py
toasty/aibot/migrations/: 0001_initial.py
toasty/api/: __init__.py  app.py
toasty/handlers/: __init__.py  comment_handler.py  issue_handler.py  pr_handler.py
toasty/pr_analyzer/: PR_seeker.py  README.md  priority_generator.py  requirements.txt  testing_class.py
toasty/schemas/: comment_schema.json  issue_schema.json  pr_schema.json
toasty/services/: ai.py
toasty/utils/: __init__.py  github.py  validation.py
